istio-ingress/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v1
  namespace: apps
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      containers:
        - name: server
          args: ["-listen=:8080", "-text=\"Hi from frontend version 1\""]
          image: hashicorp/http-echo:0.2.3
          ports:
          - containerPort: 8080
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/health"
              port: 8080
          livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/health"
              port: 8080
              httpHeaders:
              - name: "Cookie"
                value: "shop_session-id=x-liveness-probe"
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 10m
              memory: 16Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 8080
